--- a/Corona-Warn-App/src/main/res/values-de/strings.xml
+++ b/Corona-Warn-App/src/main/res/values-de/strings.xml
@@ -639,4 +639,12 @@
     <string name="information_data_transfer_switch">Mobile Daten verwenden</string>
   <string name="information_data_transfer_switch_off">Nur Wifi</string>
   <string name="information_data_transfer_switch_on">Wifi und mobile Daten</string>
+    <string name="settings_interoperability_title">Transnationale Expositionsprotokollierung</string>
+  <string name="interoperability_configuration_title">Transnationale Expositionsprotokollierung</string>
+  <string name="settings_interoperability_subtitle">Teilnehmende Länder</string>
+  <string name="interoperability_configuration_first_section">Mehrere Länder arbeiten zusammen, um transnationale Warnungen über einen gemeinsamen Austauschserver zu ermöglichen. Beispielsweise können Kontakte zu Benutzern einer offiziellen Coronavirus-App aus anderen teilnehmenden Ländern auch für die Expositionsprotokollierung berücksichtigt werden.</string>
+    <string name="interoperability_configuration_list_title">Die folgenden Länder beteiligen sich derzeit an der transnationalen Expositionserfassung:</string>
+  <string name="interoperability_configuration_information">Die Datenschutzerklärung der App (einschließlich Informationen zur Datenverarbeitung für die transnationale Expositionsprotokollierungsfunktion) finden Sie im Menü unter \"App-Informationen\"> \"Datenschutz\".</string>
+  <string name="interoperability_configuration_second_section">Zu diesem Zweck lädt die App jeden Tag eine Liste der zufälligen IDs aller Benutzer herunter, die einen positiven Test hatten und beschlossen haben, andere Benutzer durch Weitergabe ihrer zufälligen IDs zu informieren. Diese Liste wird dann mit den zufälligen IDs verglichen, die von Ihrem Smartphone aufgezeichnet wurden. Sie können diese Liste über WLAN herunterladen. Andernfalls wird ein Teil Ihres mobilen Datenbudgets verbraucht. Beachten Sie, dass dies zu Inroaming-Gebühren führen kann, wenn Sie die EU verlassen.</string>
+  <string name="interoperability_title">Transnationale Expositionsprotokollierung</string>
 </resources>
