--- a/Corona-Warn-App/src/main/res/values-nl/strings.xml
+++ b/Corona-Warn-App/src/main/res/values-nl/strings.xml
@@ -639,4 +639,12 @@
     <string name="information_data_transfer_switch">Gebruik mobiele netwerken</string>
   <string name="information_data_transfer_switch_off">Enkel Wifi</string>
   <string name="information_data_transfer_switch_on">Wifi en Mobiele Data</string>
+    <string name="settings_interoperability_title">Transnationale blootstellingsregistratie</string>
+  <string name="interoperability_configuration_title">Transnationale blootstellingsregistratie</string>
+  <string name="settings_interoperability_subtitle">Deelnemende landen</string>
+  <string name="interoperability_configuration_first_section">Verschillende landen werken samen om transnationale alerts mogelijk te maken via een gezamenlijke uitwisselingsserver. Zo kunnen ook contacten met gebruikers van een officiële coronavirus-app uit andere deelnemende landen in aanmerking worden genomen voor exposure logging.</string>
+  <string name="interoperability_configuration_list_title">De volgende landen nemen momenteel deel aan transnationale blootstellingsregistratie:</string>
+  <string name="interoperability_configuration_information">De privacyverklaring van de app (inclusief informatie over de gegevensverwerking die wordt uitgevoerd voor de transnationale blootstellingsregistratiefunctie) is te vinden in het menu onder \'Informatie app\'> \'Privacyverklaring\'.</string>
+  <string name="interoperability_configuration_second_section">Voor dit doel downloadt de app elke dag een lijst met willekeurige ID\'s van alle gebruikers die een positieve test hebben ondergaan en die hebben besloten andere gebruikers te informeren door hun willekeurige ID\'s te delen. Deze lijst wordt vervolgens vergeleken met de willekeurige ID\'s die door uw smartphone zijn geregistreerd. U kunt ervoor kiezen om deze lijst via wifi te downloaden; anders wordt een deel van uw mobiele gegevensbudget verbruikt. Houd er rekening mee dat dit kan leiden tot roamingkosten als u de EU verlaat.</string>
+  <string name="interoperability_title">Transnationale blootstellingsregistratie</string>
 </resources>
