--- a/Corona-Warn-App/src/main/res/values-fr/strings.xml
+++ b/Corona-Warn-App/src/main/res/values-fr/strings.xml
@@ -638,14 +638,37 @@
     <string name="information_data_transfer_headline">Utiliser des réseaux mobiles pour le téléchargement d\'identifiants aléatoires.</string>
     <string name="information_data_transfer_body">Téléchargez des identifiants aléatoires par le biais de réseaux mobiles. Si cette option est désactivée, les identifiants ne seront téléchargés qu\'en Wifi.</string>
     <string name="information_data_transfer_switch">Utilisez réseaux mobiles</string>
-  <string name="information_data_transfer_switch_off">Wifi Uniquement</string>
-  <string name="information_data_transfer_switch_on">Wifi et Mobile</string>
+    <string name="information_data_transfer_switch_off">Wifi Uniquement</string>
+    <string name="information_data_transfer_switch_on">Wifi et Mobile</string>
     <string name="settings_interoperability_title">Journalisation des expositions transnationales</string>
-  <string name="interoperability_configuration_title">Journalisation des expositions transnationales</string>
-  <string name="settings_interoperability_subtitle">Pays participants</string>
-  <string name="interoperability_configuration_first_section">Plusieurs pays travaillent ensemble pour permettre des alertes transnationales via un serveur d\'échange commun. Par exemple, les contacts avec les utilisateurs d\'une application officielle de coronavirus d\'autres pays participants peuvent également être pris en compte pour l\'enregistrement de l\'exposition.</string>
-  <string name="interoperability_configuration_list_title">Les pays suivants participent actuellement à l\'enregistrement des expositions transnationales:</string>
-  <string name="interoperability_configuration_information">L\'avis de confidentialité de l\'application (y compris les informations sur le traitement des données effectué pour la fonction d\'enregistrement des expositions transnationales) se trouve dans le menu sous «Informations sur l\'application»> «Confidentialité des données».</string>
-  <string name="interoperability_configuration_second_section">À cette fin, l\'application télécharge chaque jour une liste d\'identifiants aléatoires de tous les utilisateurs qui ont eu un test positif et qui ont décidé d\'informer les autres utilisateurs en partageant leurs identifiants aléatoires. Cette liste est ensuite comparée aux identifiants aléatoires enregistrés par votre smartphone. Vous pouvez choisir de télécharger cette liste via WiFi; sinon une partie de votre budget de données mobiles sera consommée. Sachez que cela peut entraîner des frais d\'itinérance si vous quittez l\'UE.</string>
-  <string name="interoperability_title">Journalisation des expositions transnationales</string>
+    <string name="interoperability_configuration_title">Journalisation des expositions transnationales</string>
+    <string name="settings_interoperability_subtitle">Pays participants</string>
+    <string name="interoperability_configuration_first_section">Plusieurs pays travaillent ensemble pour permettre des alertes transnationales via un serveur d\'échange commun. Par exemple, les contacts avec les utilisateurs d\'une application officielle de coronavirus d\'autres pays participants peuvent également être pris en compte pour l\'enregistrement de l\'exposition.</string>
+    <string name="interoperability_configuration_list_title">Les pays suivants participent actuellement à l\'enregistrement des expositions transnationales:</string>
+    <string name="interoperability_configuration_information">L\'avis de confidentialité de l\'application (y compris les informations sur le traitement des données effectué pour la fonction d\'enregistrement des expositions transnationales) se trouve dans le menu sous «Informations sur l\'application»> «Confidentialité des données».</string>
+    <string name="interoperability_configuration_second_section">À cette fin, l\'application télécharge chaque jour une liste d\'identifiants aléatoires de tous les utilisateurs qui ont eu un test positif et qui ont décidé d\'informer les autres utilisateurs en partageant leurs identifiants aléatoires. Cette liste est ensuite comparée aux identifiants aléatoires enregistrés par votre smartphone. Vous pouvez choisir de télécharger cette liste via WiFi; sinon une partie de votre budget de données mobiles sera consommée. Sachez que cela peut entraîner des frais d\'itinérance si vous quittez l\'UE.</string>
+    <string name="interoperability_title">Journalisation des expositions transnationales</string>
+
+    <string name="tools_card_body">Découvrez plusieurs outils pour respecter les mesures COVID actuelles</string>
+    <string name="tools_card_title">Boîte à outils</string>
+    <string name="tools_title">Boîte à outils</string>
+
+    <string name="tools_vaccination_information">Informations sur la vaccination</string>
+    <string name="tools_test_reservation">Réservation d\'un test</string>
+    <string name="tools_quarantine_certification">Certificat de quarantaine</string>
+    <string name="tools_passenger_locator_form">Formulaire de Localisation du Passager</string>
+    <string name="tools_declaration_of_honour">Voyage essentiel - Déclaration sur l’honneur</string>
+    <string name="tools_test_center">Trouver un centre de test</string>
+
+    <string name="tools_vaccination_information_title">Vaccination</string>
+    <string name="tools_test_reservation_title">Réservation d\'un test</string>
+    <string name="tools_quarantine_certification_title">Certificat</string>
+    <string name="tools_passenger_locator_form_title">PLF</string>
+    <string name="tools_declaration_of_honour_title">Déclaration</string>
+
+    <string name="tools_epidemiological_situation">Situation épidémiologique du COVID-19</string>
+    <string name="tools_register_to_be_vaccinated">Inscrivez-vous pour être vacciné</string>
+
+    <string name="tools_book_a_test">Réservez un test</string>
+    <string name="tools_book_a_test_in_brussels">Réservez un test à Bruxelles</string>
 </resources>
